--- a/nekumo/servers/web/templates/web/node.html
+++ b/nekumo/servers/web/templates/web/node.html
@@ -1,5 +1,6 @@
 {% extends "web/base.html" %}
 {% block css %}
+    <!-- build:css node-nekumo.min.css -->
     <link rel="stylesheet"
           href="{{ nekumo_root }}/static/src/web/libs/angular-ui-notification/dist/angular-ui-notification.min.css">
     <link rel="stylesheet"
@@ -7,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{{ nekumo_root }}/static/src/web/css/node.css">
     <link rel="stylesheet"
           type="text/css" href="{{ nekumo_root }}/static/src/web/libs/angular-material-data-table/dist/md-data-table.css">
+    <!-- endbuild -->
 {% endblock %}
 {% block content %}
     {% raw %}
@@ -273,14 +275,17 @@
     {% endraw %}
 {% endblock %}
 {% block extra_js_libs %}
+<!-- build:js node-libs.min.js -->
 <script src="{{ nekumo_root }}/static/src/web/libs/svg-morpheus/compile/unminified/svg-morpheus.js"></script>
 <script src="{{ nekumo_root }}/static/src/web/libs/angular-material-data-table/dist/md-data-table.js"></script>
 <script src="{{ nekumo_root }}/static/src/web/libs/angular-uuid4/angular-uuid4.js"></script>
 <script src="{{ nekumo_root }}/static/src/web/libs/moment/moment.js"></script>
 <script src="{{ nekumo_root }}/static/src/web/libs/angular-moment/angular-moment.js"></script>
 <script src="{{ nekumo_root }}/static/src/web/libs/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
-
+<!-- endbuild -->
 {% endblock %}
 {% block extra_js %}
+    <!-- build:js node-nekumo.min.js -->
     <script src="{{ nekumo_root }}/static/src/web/js/node.js"></script>
+    <!-- endbuild -->
 {% endblock %}
