Opción para correr el servidor en modo debug o no. Copiar fonts para modo producción.

--- a/nekumo/servers/web/templates/web/base.html
+++ b/nekumo/servers/web/templates/web/base.html
@@ -3,13 +3,17 @@
     <head>
         <title>Nekumo</title>
         <meta charset="utf-8">
-        <!-- build:css base-nekumo.min.css -->
-        <link rel="stylesheet" href="{{ nekumo_root }}/static/src/web/libs/angular-material/angular-material.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
-        <link rel="stylesheet" href="{{ nekumo_root }}/static/src/web/css/base.css">
-        <link href="{{ nekumo_root }}/static/src/web/libs/mdi/css/materialdesignicons.css"
-              media="all" rel="stylesheet" type="text/css" />
-        <!-- endbuild -->
+        {% if debug %}
+            <!-- build:css base-nekumo.min.css -->
+            <link rel="stylesheet" href="{{ nekumo_root }}/static/src/web/libs/angular-material/angular-material.css">
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
+            <link rel="stylesheet" href="{{ nekumo_root }}/static/src/web/css/base.css">
+            <link rel="stylesheet" href="{{ nekumo_root }}/static/src/web/libs/mdi/css/materialdesignicons.css">
+            <!-- endbuild -->
+        {% else %}
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
+            <link rel="stylesheet" href="{{ nekumo_root }}/static/build/base-nekumo.min.css">
+        {% endif %}
         <!-- TODO: Incluir RobotoDraft -->
         {% block css %}{% endblock %}
     </head>
@@ -81,32 +85,40 @@
     </script>
     {% endraw %}
     {% block js %}
-        <!-- build:js base-libs.min.js -->
-        <script src="{{ nekumo_root }}/static/src/web/libs/jquery/dist/jquery.js"></script>
-        <script src="{{ nekumo_root }}/static/src/web/libs/uuid-js/lib/uuid.js"></script>
-        <script src="{{ nekumo_root }}/static/src/web/libs/angular/angular.js"></script>
-        <script src="{{ nekumo_root }}/static/src/web/libs/angular-websocket/dist/angular-websocket.js"></script>
-        <script src="{{ nekumo_root }}/static/src/web/libs/angular-animate/angular-animate.js"></script>
-        <script src="{{ nekumo_root }}/static/src/web/libs/angular-aria/angular-aria.js"></script>
-        <script src="{{ nekumo_root }}/static/src/web/libs/angular-material/angular-material.js"></script>
-        <script src="{{ nekumo_root }}/static/src/web/libs/angular-material-icons/angular-material-icons.js"></script>
-        <script src="{{ nekumo_root }}/static/src/web/libs/angular-material-colors/md-colors.js"></script>
-        <script src="{{ nekumo_root }}/static/src/web/libs/restangular/dist/restangular.js"></script>
-        <script src="{{ nekumo_root }}/static/src/web/libs/sprintf/src/sprintf.js"></script>
-        <script src="{{ nekumo_root }}/static/src/web/libs/sprintf/src/angular-sprintf.js"></script>
-        <script src="{{ nekumo_root }}/static/src/web/libs/lodash/lodash.js"></script>
-        <script src="{{ nekumo_root }}/static/src/web/own_libs/dialog-message/dialog-message.js"></script>
-        <!-- endbuild -->
+        {% if debug %}
+            <!-- build:js base-libs.min.js -->
+            <script src="{{ nekumo_root }}/static/src/web/libs/jquery/dist/jquery.js"></script>
+            <script src="{{ nekumo_root }}/static/src/web/libs/uuid-js/lib/uuid.js"></script>
+            <script src="{{ nekumo_root }}/static/src/web/libs/angular/angular.js"></script>
+            <script src="{{ nekumo_root }}/static/src/web/libs/angular-websocket/dist/angular-websocket.js"></script>
+            <script src="{{ nekumo_root }}/static/src/web/libs/angular-animate/angular-animate.js"></script>
+            <script src="{{ nekumo_root }}/static/src/web/libs/angular-aria/angular-aria.js"></script>
+            <script src="{{ nekumo_root }}/static/src/web/libs/angular-material/angular-material.js"></script>
+            <script src="{{ nekumo_root }}/static/src/web/libs/angular-material-icons/angular-material-icons.js"></script>
+            <script src="{{ nekumo_root }}/static/src/web/libs/angular-material-colors/md-colors.js"></script>
+            <script src="{{ nekumo_root }}/static/src/web/libs/restangular/dist/restangular.js"></script>
+            <script src="{{ nekumo_root }}/static/src/web/libs/sprintf/src/sprintf.js"></script>
+            <script src="{{ nekumo_root }}/static/src/web/libs/sprintf/src/angular-sprintf.js"></script>
+            <script src="{{ nekumo_root }}/static/src/web/libs/lodash/lodash.js"></script>
+            <script src="{{ nekumo_root }}/static/src/web/own_libs/dialog-message/dialog-message.js"></script>
+            <!-- endbuild -->
+        {% else %}
+            <script src="{{ nekumo_root }}/static/build/base-libs.min.js"></script>
+        {% endif %}
         {% block extra_js_libs %}{% endblock %}
         <script>
             var app = angular.module('{{ ngApp | default("NekumoApp") }}', {{ angular_modules|default([])|tojson }});
             var websocket_path = '{{ websocket_path }}';
             var static_root = '{{ nekumo_root }}/static/'
         </script>
-        <!-- build:js base-nekumo.min.js -->
-        <script src="{{ nekumo_root }}/static/src/web/js/ws.js"></script>
-        <script src="{{ nekumo_root }}/static/src/web/js/base.js"></script>
-        <!-- endbuild -->
+        {% if debug %}
+            <!-- build:js base-nekumo.min.js -->
+            <script src="{{ nekumo_root }}/static/src/web/js/ws.js"></script>
+            <script src="{{ nekumo_root }}/static/src/web/js/base.js"></script>
+            <!-- endbuild -->
+        {% else %}
+            <script src="{{ nekumo_root }}/static/build/base-nekumo.min.js"></script>
+        {% endif %}
         {% block extra_js %}{% endblock %}
     {% endblock %}
 </html>
