--- a/nekumo/servers/web/static/src/web/css/base.css
+++ b/nekumo/servers/web/static/src/web/css/base.css
@@ -114,6 +114,16 @@ md-menu-item md-icon.mdi {
 *:focus {
   outline: 0; }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0;
+  /* <-- Apparently some margin are still there even though it's hidden */ }
+
+input[type=number], md-input-container input[type=number] {
+  -moz-appearance: textfield; }
+
 body {
   background: #eee;
   height: auto; }
@@ -125,6 +135,14 @@ a {
   position: absolute;
   top: 0;
   float: left; }
+
+md-input-container.md-dark-theme-theme label {
+  text-shadow: none; }
+
+/* Añadidos para Angular Material */
+.radius-toolbar {
+  border-radius: 3px 3px 0 0;
+  box-shadow: 0 1px rgba(255, 255, 255, 0.1); }
 
 /* Cabecera */
 header {
