--- a/nekumo/servers/web/static/src/web/css/node.css
+++ b/nekumo/servers/web/static/src/web/css/node.css
@@ -65,3 +65,78 @@ tr.alert td {
 #cut_copy_nodes_exists md-input-container input.md-input {
   margin-top: 6px;
   padding-left: 20px; }
+
+/* Preview files */
+#file-viewer {
+  z-index: 61;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-left: -160px; }
+  #file-viewer file-viewer #image-viewer img {
+    max-height: calc(100vh - 100px);
+    max-width: calc(100vw - 420px); }
+  #file-viewer file-viewer .ace_editor {
+    height: calc(100vh - 100px);
+    width: 800px; }
+  #file-viewer file-viewer #default-viewer .card-media {
+    background: #999999;
+    color: snow;
+    font-size: 140px;
+    text-align: center;
+    margin-left: 10px; }
+
+#rightPanel {
+  position: fixed; }
+  #rightPanel md-toolbar md-icon {
+    margin: 0;
+    margin-top: 2px; }
+  #rightPanel md-card {
+    box-shadow: none; }
+    #rightPanel md-card .card-media {
+      text-align: center;
+      font-size: 100px;
+      color: snow; }
+  #rightPanel #extended-info {
+    display: table;
+    width: 100%;
+    padding: 0;
+    font-size: 14px;
+    color: #4e4e4e; }
+    #rightPanel #extended-info li {
+      display: table-row; }
+      #rightPanel #extended-info li span {
+        display: table-cell;
+        width: 50%; }
+        #rightPanel #extended-info li span.key {
+          text-align: right;
+          padding-right: 10px; }
+          #rightPanel #extended-info li span.key::after {
+            content: ':'; }
+
+#quick-start {
+  margin-bottom: 30px; }
+  #quick-start md-content.is-changed md-input-container {
+    margin-bottom: 0; }
+  #quick-start .ng-dirty {
+    color: #f5d135; }
+  #quick-start .subtitle {
+    font-size: 12px;
+    color: #dbdbdb; }
+    #quick-start .subtitle a {
+      color: #b4c9ff; }
+  #quick-start .port-container {
+    margin-right: 30px; }
+  #quick-start [name=address] {
+    width: 140px; }
+  #quick-start [name=port] {
+    width: 80px; }
+  #quick-start .close-button {
+    height: 48px; }
+  #quick-start md-icon {
+    font-size: 32px;
+    margin-right: 15px;
+    height: 32px; }
+    #quick-start md-icon.close {
+      color: #ff0000; }
