Arreglada compresión de Videogular y carga de fuentes desde build.

--- a/nekumo/servers/web/templates/web/base.html
+++ b/nekumo/servers/web/templates/web/base.html
@@ -116,6 +116,7 @@
             var static_root = '{{ nekumo_root }}/static/';
             var isAdmin = {{ is_admin|tojson }};
             var showQuickStart= {{ show_quickstart|tojson }};
+            var debug = {{ debug|tojson }};
         </script>
         {% if debug %}
             <!-- build:js base-nekumo.min.js -->
